<resources>
    <string name="app_name">ZeroAuth</string>

    <string name="label_valid">Valid:</string>
    <string name="label_return_code">Return Code:</string>
    <string name="label_return_message">Return Message:</string>
    <string name="label_issuer_transaction_id">Issuer Transaction Id:</string>
    <string name="label_error_code">Error Code:</string>
    <string name="label_error_message">Error Message:</string>
    <string name="placeholder_loading">Loading…</string>

</resources>
